--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
           <wsdlUrls>
             <wsdlUrl>http://localhost:8080/MovieServiceWebApp/MovieWebService?wsdl</wsdlUrl>
           </wsdlUrls>
-          <packageName>com.schallerl.generated</packageName>
+          <packageName>generated</packageName>
           <sourceDestDir>target/generated-sources</sourceDestDir>
           <keep>true</keep>
         </configuration>
